# marketMicstrLab

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: replay_benchmark.md
cpp/include/mml/: jsonl_replay.hpp  order_book.hpp  version.hpp
cpp/src/: jsonl_replay.cpp  order_book.cpp  version.cpp
cpp/tests/: test_jsonl_replay.cpp  test_order_book.cpp  test_version.cpp
cpp/tools/: benchmark_replay.cpp  replay_jsonl.cpp  smoke.cpp
docs/: architecture.md  data_schemas.md  phase_plan.md  project_spec.md
reports/: research_writeup.md
src/market_micstr_lab/: __init__.py
src/market_micstr_lab/book/: __init__.py  order_book.py  replay.py
src/market_micstr_lab/capture/: __init__.py  kraken_ws.py
src/market_micstr_lab/cli/: build_dataset.py  build_report_site.py  capture_dataset.py  capture_kraken.py  normalize.py  plot_research.py  run_baseline.py  run_execution.py  run_walk_forward.py
src/market_micstr_lab/data/: __init__.py  jsonl.py  normalize.py  pipeline.py  schemas.py
src/market_micstr_lab/features/: book_features.py  pipeline.py
src/market_micstr_lab/research/: __init__.py  baseline.py  charts.py  dataset.py  execution.py  labels.py  report_site.py  walk_forward.py
tests/: test_baseline.py  test_book_features.py  test_charts.py  test_cli_build_dataset.py  test_cli_capture_dataset.py  test_cli_normalize.py  test_dataset.py  test_execution.py  test_feature_pipeline.py  test_jsonl.py  test_kraken_capture.py  test_labels.py  test_normalize_book.py  test_normalize_trade.py  test_order_book.py  test_package.py  test_pipeline.py  test_replay.py  test_report_site.py  test_walk_forward.py
